--- a/style.css
+++ b/style.css
@@ -15,36 +15,37 @@ header{
 }
 .contenedor{
     width: 100%;
-    
+    display: flex;
 }
 .texto-encript{
-    margin-left: 244px;
-
+    
+    margin-left: 180px; 
+    float: left;
     resize: none;
     font-size: 32px;
     display: block;
     color: #0A3871;
     background-color: #F3F5FC;
     border: none;
-    display: inline;
-    vertical-align: top;
     width: 680px;
     height: 944px;
+    
 }
 .texto-encript:focus{
     outline: none;
 }
 .mensaje{
+    margin-right: 40px;
     background-color: white;
     width: 400px;
     height: 944px;
-    display: inline-block;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
     font-weight: 400;
     font-size: 24px;
     line-height: 36px;
     color: #495057;
+    float: right;
 }
 
 .imagen-mensaje{
@@ -98,8 +99,7 @@ header{
 .contenedor-botones{
     width: 685px;
     display: inline-block;
-    position: relative;
-    left: 200px; bottom: 150px;
+    position: relative; left: 200px; bottom: 150px;
 }
 .contenedor-botones p{
     margin-bottom: 16px;
@@ -113,4 +113,57 @@ header{
 }
 .contenedor-botones input{
     font-size: 16px;
+}
+@media screen and (max-width: 830px){
+    .contenedor{
+        width: auto;
+        display: flex;
+        flex-direction: column;
+    }
+    .texto-encript{
+        margin-left: 40px;
+        height: 500px;
+
+
+    }
+    .mensaje{
+        margin-left: 40px;
+        width: 670px;
+        height: 133px;
+
+        padding-top: 10px;
+
+        
+    }
+    .imagen-mensaje{
+        display: none;
+    }
+    .contenedor-botones{
+        position: static;
+        margin-left: 40px;
+        margin-bottom: 40px;
+    }
+    
+}
+
+@media screen and (max-width: 500px){
+    .contenedor{
+        width: auto;
+    }
+    .mensaje{
+        margin-top: 10px;
+        width: auto;
+    }
+    .contenedor-botones{
+        margin: 0 auto;
+        margin-left: 40px;
+    }
+    .contenedor-botones, .botones{
+        display: block;
+        
+    }
+    .botones input{
+        display: block;
+        margin-bottom: 10px;
+    }
 }
