--- a/style.css
+++ b/style.css
@@ -143,10 +143,14 @@ header{
     }
     .mensaje{
         margin-left: 40px;
-        width: 670px;
-        height: 133px;
+        width: auto;
+        height: auto;
 
         padding-top: 10px;
+    }
+    .copiar{
+        width: 300px;
+        height: 50px;
     }
     .mensaje-interno{
         height: 85%;
